--- a/home.html
+++ b/home.html
@@ -52,13 +52,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Game</a>
+                        <a class="page-scroll" href="#game">Game</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Alzheimer's Disease</a>
+                        <a class="page-scroll" href="#disease">Alzheimer's Disease</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Help Us</a>
+                        <a class="page-scroll" href="#help">Help Us</a>
                     </li>
                 </ul>
             </div>
@@ -71,56 +71,32 @@
     <header background-image="img/header.jpeg">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading" style="text-align:middle">Ever Wondered How It's Like to Have Alzheimer's Disease?</div>
-                <a href="#services" class="page-scroll btn btn-xl">Start Simulation</a>
+                <div class="intro-heading" style="text-align:middle">Ever Wondered What It's Like to Have Alzheimer's Disease?</div>
+                <a href="#game" class="page-scroll btn btn-xl">Start Simulation</a>
             </div>
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services">
+    <!-- Game Section -->
+    <section id="game">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Game</h2>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
+            <div style="width:fill;height:400px;border:1px solid #000;">
+                Your Game is inserted here.
             </div>
         </div>
     </section>
 
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <!-- Disease Section -->
+    <section id="disease" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
+                    <h2 class="section-heading">Alzheimer's Disease</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -213,8 +189,8 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about">
+    <!-- Help Us Section -->
+    <section id="help">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
