added button and links

--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@
                 <iframe width="500" height="350" src="https://www.youtube.com/embed/x9MvEZskR6o" frameborder="0" allowfullscreen>
                 </iframe>
               </div>
-              <div>
-                <button type="button">
+              <div class="col-md-12" align="center" style="padding-top: 30px">
+                <a href="https://donate.alzheimersresearchuk.org/publicnew/" class="btn" style="font-size:20px; color:white; background-color:#fed136">
+                  A Click Away from <br> Changing the World</a>
+
               </div>
             </div>
         </div>
