--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
                     <h2 class="section-heading">Game</h2>
                 </div>
             </div>
-            <div style="width:fill;height:400px;border:1px solid #000;">
-                Your Game is inserted here.
+            <div style="width:fill;height:400px;border:1px solid #000;position:relative;">
+                <ul id="game-bar">
+									<li class="game-nav"><a>Home</a><li>
+									<li class="game-nav"><a>Poo</a><li>
+								</ul>
+								<div id="game-chat">
+								</div>
             </div>
         </div>
     </section>
