--- a/index.html
+++ b/index.html
@@ -93,12 +93,7 @@
                 </div>
             </div>
             <div style="width:fill;height:400px;border:1px solid #000;position:relative;">
-                <ul id="game-bar">
-									<li class="game-nav"><a>Home</a><li>
-									<li class="game-nav"><a>Poo</a><li>
-								</ul>
-								<div id="game-chat">
-								</div>
+							Here
             </div>
         </div>
     </section>
