Can add text to list

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                 </div>
             </div>
             <div style="width:fill;height:400px;border:1px solid #000;position:relative;">
-							Here
+							<ul id="game-chat">
+							</ul>
+							<input type='text' id='idea' />
+							<input type='button' value='add to list' id='add' />
             </div>
         </div>
     </section>
