--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
             </div>
             <div class="row">
               <div class="col-lg-6" align="center">
-                <iframe width="500" height="350" src="https://www.youtube.com/embed/Y9pd6F7Wojk" frameborder="0" allowfullscreen>
+                <iframe width="100%" height="350" src="https://www.youtube.com/embed/Y9pd6F7Wojk" frameborder="0" allowfullscreen>
                 </iframe>
               </div>
               <div class="col-lg-6" align="center">
-                <iframe width="500" height="350" src="https://www.youtube.com/embed/x9MvEZskR6o" frameborder="0" allowfullscreen>
+                <iframe width="100%" height="350" src="https://www.youtube.com/embed/x9MvEZskR6o" frameborder="0" allowfullscreen>
                 </iframe>
               </div>
               <div class="col-md-12" align="center" style="padding-top: 30px">
