--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
                 </div>
             </div>
             <div style="width:fill;height:400px;border:1px solid #000;position:relative;">
-							Here
+							<div class="computer-message" style="width:400px">
+                test
+              </div>
+              <div class="computer-message" style="width:400px">
+                test2
+              </div>
             </div>
         </div>
     </section>
