--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
                     <h2 class="section-heading">Game</h2>
                 </div>
             </div>
-            <div style="width:fill;height:400px;border:1px solid #000;position:relative;">
+            <div style="width:fill; height:450px; border:1px; border-bottom:transparent; solid #000">
 							<ul id="game-chat">
+                <li>Hey bro what's up?</li>
 							</ul>
-							<form id='game-form' onSubmit='preventDefault'>
+							<form id='game-form' onSubmit='preventDefault' align="bottom" style="height:10px">
 								<input type='text' id='idea' />
 								<button id='add'>Send</button>
 							</form>
