--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div style="width:fill; height:450px; border:1px; border-bottom:transparent; solid #000">
 							<ul id="game-chat">
-                <li>Hey bro what's up?</li>
+                <li class="game-messageR">Hey bro what's up?</li>
 							</ul>
 							<form id='game-form' onSubmit='preventDefault' align="bottom" style="height:10px">
 								<input type='text' id='idea' />
