better chat started working on form

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div style="width:fill; height:450px; border:1px; border-bottom:transparent; solid #000">
 							<ul id="game-chat">
-                <li class="game-messageR">Hey bro what's up?</li>
+                <div style='width:100%'><li class="game-messageR">Hey bro what's up?</li></div>
 							</ul>
 							<form id='game-form' onSubmit='preventDefault' align="bottom" style="height:10px">
 								<input type='text' id='idea' />
@@ -188,7 +188,7 @@
                 </iframe>
               </div>
               <div class="col-md-12" align="center" style="padding-top: 30px">
-                <a href="https://donate.alzheimersresearchuk.org/publicnew/" class="btn" style="font-size:20px; color:white; background-color:#fed136">
+                <a href="https://donate.alzheimersresearchuk.org/publicnew/" class="page-scroll btn btn-xl" style="font-size:20px; color:white; background-color:#fed136">
                   A Click Away from <br> Changing the World</a>
 
               </div>
