Chat css updated

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<ul id="game-chat">
                 <div style='width:100%'><li class="game-messageR">Hey bro what's up?</li></div>
 							</ul>
-							<form id='game-form' onSubmit='preventDefault' align="bottom" style="height:10px">
+							<form id='game-form' onSubmit='preventDefault' align="bottom">
 								<input type='text' id='idea' />
 								<button id='add'>Send</button>
 							</form>
