selects responses from an array

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 							</ul>
 							<form id='game-form' onSubmit='preventDefault' align="bottom">
 								<input type='text' id='idea' />
+                <span id="counter" style="visibility:hidden" value="-1"></span>
 								<button id='add'>Send</button>
 							</form>
             </div>
