Implemented randomly change your text messages

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <div style='width:100%'><li class="game-messageR">Hey bro what's up?</li></div>
 							</ul>
 							<form id='game-form' onSubmit='preventDefault' align="bottom">
-								<input type='text' id='idea' />
-								<button id='add'>Send</button>
+								<input type='text' id='idea' onSubmit="test()"/>
+								<button id='add' onSubmit="test()">Send</button>
 							</form>
             </div>
         </div>
