included facebook.js and fixed bottom textbox

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Custom Fonts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="client.js"></script>
+		<script src="facebook.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -227,18 +228,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/home.js"></script>
-
-<input id="textbox" type="text" width=300px heught=400px onkeyup="uniCharCode(event)">
-					<script>
-var timer  = 25;
-					function uniCharCode(event) {
-					if (timer > Math.random()*100){
-						var charValue = event.which || event.keyCode;
-						document.getElementById("textbox").value = document.getElementById("textbox").value.slice(0,-1) + String.fromCharCode(charValue+1);
-						}
-					};
-				</script>
-
+    <script src="js/home.js"></script>	
 
 </html>
