No more hey bro

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div style="width:fill; height:450px; border:1px; border-bottom:transparent; solid #000">
 							<ul id="game-chat">
-                <div style='width:100%'><li class="game-messageR">Hey bro what's up?</li></div>
+                <div style='width:100%'><li class="game-messageR">Hey what's up?</li></div>
 							</ul>
 							<form id='game-form' onSubmit='preventDefault' align="bottom">
 								<input type='text' id='idea'/>
