--- a/index.html
+++ b/index.html
@@ -31,6 +31,134 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	
+	<script>
+	  var accessToken;
+	  // This is called with the results from from FB.getLoginStatus().
+	  function statusChangeCallback(response) {
+		console.log('statusChangeCallback');
+		console.log(response);
+		// The response object is returned with a status field that lets the
+		// app know the current login status of the person.
+		// Full docs on the response object can be found in the documentation
+		// for FB.getLoginStatus().
+		if (response.status === 'connected') {
+		  // Logged into your app and Facebook.
+		  getFriendInfo();
+		} else if (response.status === 'not_authorized') {
+		  // The person is logged into Facebook, but not your app.
+		  document.getElementById('status').innerHTML = 'Please log ' +
+			'into this app.';
+		} else {
+		  // The person is not logged into Facebook, so we're not sure if
+		  // they are logged into this app or not.
+		  document.getElementById('status').innerHTML = 'Please log ' +
+			'into Facebook.';
+		}
+	  }
+
+	  // This function is called when someone finishes with the Login
+	  // Button.  See the onlogin handler attached to it in the sample
+	  // code below.
+	  function checkLoginState() {
+		FB.getLoginStatus(function(response) {
+		  statusChangeCallback(response);
+		});
+	  }
+
+	  window.fbAsyncInit = function() {
+	  FB.init({
+		appId      : 212599245854855,
+		cookie     : true,  // enable cookies to allow the server to access 
+							// the session
+		xfbml      : true,  // parse social plugins on this page
+		version    : 'v2.8' // use graph api version 2.8
+	  });
+
+	  // Now that we've initialized the JavaScript SDK, we call 
+	  // FB.getLoginStatus().  This function gets the state of the
+	  // person visiting this page and can return one of three states to
+	  // the callback you provide.  They can be:
+	  //
+	  // 1. Logged into your app ('connected')
+	  // 2. Logged into Facebook, but not your app ('not_authorized')
+	  // 3. Not logged into Facebook and can't tell if they are logged into
+	  //    your app or not.
+	  //
+	  // These three cases are handled in the callback function.
+
+	  FB.getLoginStatus(function(response) {
+		statusChangeCallback(response);
+		accessToken = response.authResponse.accessToken;
+	  });
+
+	  };
+
+	  // Load the SDK asynchronously
+	  (function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js";
+		fjs.parentNode.insertBefore(js, fjs);
+	  }(document, 'script', 'facebook-jssdk'));
+	 
+	  function getFriendInfo() {
+		var friendName = "Daniel James";
+		var friendID = 1325628984153930;
+		FB.api(
+		"/me/friends",
+		function (response) {
+		console.log(response && !response.error);
+		  if (response && !response.error) {
+		console.log("JSON\nJSON\JSON!!!");
+			console.log(JSON.stringify(response));
+		console.log(response.data[0].name);
+		var friendName = response.data[0].name;
+		var friendID = response.data[0].id;
+		console.log( friendID);
+		$("#friend").text(friendName);
+		  }
+		else {
+		$("#friend").text("Daniel James");
+		}
+		}
+	  );
+	  
+	  FB.api(
+		"/me/",
+		function (response) {
+		  if (response && !response.error) {
+		console.log("IMAGE: " + JSON.stringify(response));
+		$("#me").text(response.name);
+		  }
+		}
+	  );
+	  
+	  console.log("Picture api being called" + "/" + friendID + "/picture/");
+	  FB.api(
+		"/" + friendID + "/picture/",
+		function (response) {
+		  if (response && !response.error) {
+			console.log("IMAGE: " + JSON.stringify(response));
+			$("#friendImg").attr("src", response.data.url);
+		  }
+		}
+	  );
+	  
+	  FB.api(
+		"/me/picture/",
+		function (response) {
+		  if (response && !response.error) {
+		console.log("Me image: " + JSON.stringify(response));
+		$("#meImg").attr("src",response.data.url);
+		  }
+		}
+	  );
+	  
+	 }
+	  
+	</script>
 
 </head>
 
@@ -86,12 +214,19 @@
     </header>
 
     <!-- Game Section -->
+	<fb:login-button scope="public_profile,email,user_friends" onlogin="checkLoginState();">
+	</fb:login-button>
     <section id="game">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Game</h2>
+					<img id="friendImg" styles="float=right"></img>
+					<img id="meImg" styles="float=left"></img>
                 </div>
+			<p>Names:</p>
+			<p id="friend" styles="float=right"></p>
+			<p id="me" styles="float=left"></p>
             </div>
             <div style="width:fill; height:450px; border:1px; border-bottom:transparent; solid #000">
 							<ul id="game-chat">
